--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="https://proyek-3-proyek.github.io/tokline.github.io"
             >Home <i class="i-home fi fi-rr-home"></i
           ></a>
-          <a href="/belanja"
+          <a class="active" href="/belanja"
             >Belanja <i class="i-belanja fi fi-rr-shopping-bag"></i
           ></a>
           <a href="#">Contact <i class="i-contact fi fi-rr-phone-call"></i></a>
