--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="modal-body">
           <h3 id="modalProductName"></h3>
           <p id="modalProductDescription"></p>
-          <p class="price">Rp. <span id="modalProductPrice"></span></p>
+          <p class="price"><span id="modalProductPrice"></span></p>
           <p class="stock">Stok: <span id="modalProductStock"></span></p>
           <!-- Input hidden untuk ID produk -->
           <input type="hidden" id="modalProductId" />
